--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "bcrypt": "^5.0.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
