--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   postgres:
     image: postgres:latest
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
