Added email verification

--- a/.env
+++ b/.env
@@ -6,4 +6,11 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 JWT_SECRET=""
-
+SMTP_SENDER=""
+SMTP_HOST=""
+SMTP_PORT="465"
+SMTP_TLS="true"
+SMTP_USER=""
+SMTP_PASSWORD=""
+BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
