--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
+    "nodemailer": "^6.7.5",
     "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -22,6 +23,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
