--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.7.5",
     "query-string": "^7.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
